# quirky_binder_console

./: .gitignore  Cargo.toml  Dioxus.toml  package.json  tailwind.css
assets/: main.css
src/: main.rs
